fix bug of not correct aligned calendars

--- a/src/app/view/operating-periods/calendar-view/calendar-view.component.css
+++ b/src/app/view/operating-periods/calendar-view/calendar-view.component.css
@@ -1,5 +1,6 @@
 .calendar-view {
   width: 300px;
+  height: 370px;
 }
 
 button.day-valid {
